--- a/behat.yml
+++ b/behat.yml
@@ -7,6 +7,7 @@ default:
         features: '%paths.base%/tests/features'
       contexts:
         - FeatureContext
+        - OpenyDrupalContext
         - Drupal\DrupalExtension\Context\DrupalContext
         - Drupal\DrupalExtension\Context\MinkContext
         - Drupal\DrupalExtension\Context\MessageContext
