--- a/openy_prgf_2c/config/install/core.entity_view_display.paragraph.2c.default.yml
+++ b/openy_prgf_2c/config/install/core.entity_view_display.paragraph.2c.default.yml
@@ -14,7 +14,7 @@ content:
     weight: 0
     label: hidden
     settings:
-      view_mode: trimmed
+      view_mode: default
       link: false
     third_party_settings: {  }
     type: entity_reference_entity_view
@@ -22,7 +22,7 @@ content:
     weight: 1
     label: hidden
     settings:
-      view_mode: trimmed
+      view_mode: default
       link: false
     third_party_settings: {  }
     type: entity_reference_entity_view
