--- a/docroot/sites/default/config/staging/views.view.ymca_retention_winners.yml
+++ b/docroot/sites/default/config/staging/views.view.ymca_retention_winners.yml
@@ -1290,27 +1290,24 @@ display:
           entity_type: ymca_retention_winner
           entity_field: branch
           plugin_id: string
-        member:
-          id: member
-          table: ymca_retention_winner
-          field: member
-          relationship: none
+        membership_id:
+          id: membership_id
+          table: ymca_retention_member
+          field: membership_id
+          relationship: member
           group_type: group
           admin_label: ''
           operator: '='
-          value:
-            min: ''
-            max: ''
-            value: ''
+          value: ''
           group: 1
           exposed: true
           expose:
-            operator_id: member_op
+            operator_id: membership_id_op
             label: 'Member ID'
             description: ''
             use_operator: false
-            operator: member_op
-            identifier: member
+            operator: membership_id_op
+            identifier: membership_id
             required: false
             remember: false
             multiple: false
@@ -1334,9 +1331,9 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-          entity_type: ymca_retention_winner
-          entity_field: member
-          plugin_id: numeric
+          entity_type: ymca_retention_member
+          entity_field: membership_id
+          plugin_id: string
         combine:
           id: combine
           table: views
@@ -1344,7 +1341,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          operator: '='
+          operator: contains
           value: ''
           group: 1
           exposed: true
@@ -1626,7 +1623,7 @@ display:
               manager: ''
               company: ''
       path: admin/content/ymca-retention-winners/exoprt.csv
-      filename: ''
+      filename: export.csv
       automatic_download: 0
       displays:
         ymca_retention_winners: ymca_retention_winners
@@ -1683,6 +1680,8 @@ display:
             place:
               alias: ''
               raw_output: false
+      export_method: batch
+      export_batch_size: '100'
     cache_metadata:
       max-age: -1
       contexts:
