--- a/tour.tour.openy-branch-add.yml
+++ b/tour.tour.openy-branch-add.yml
@@ -42,7 +42,7 @@ tips:
     body: 'Select "Branch Amenities" and press "Add new custom block." [openy_tour:click:edit-field-branch-body-2-subform-field-prgf-3c-left-actions-ief-add]'
     weight: 4
     attributes:
-      data-class: 'form-item-field-branch-body-1-subform-field-prgf-3c-left-actions-bundle'
+      data-class: 'input[value="Add new custom block"]'
 
   create-block:
     id: block-type
