[YMCA-1574] add winners page - layout, 2 blocks; add angular app for winners page

--- a/docroot/modules/custom/ymca_retention/ymca_retention.layouts.yml
+++ b/docroot/modules/custom/ymca_retention/ymca_retention.layouts.yml
@@ -19,3 +19,15 @@ ymca-retention:
     tab_5:
       label: Tab 5
   library: ymca_retention/angular-app
+
+ymca-retention-winners:
+  label: YMCA Retention Winners
+  category: YMCA layouts
+  template: templates/layouts/ymca-retention-winners-layout
+  class: '\Drupal\ymca_retention\Plugin\Layout\YmcaRetentionWinnersLayout'
+  regions:
+    header:
+      label: Header
+    main:
+      label: Main section
+  library: ymca_retention/ngwinners-app
