--- a/docroot/modules/custom/ymca_retention/ymca_retention.libraries.yml
+++ b/docroot/modules/custom/ymca_retention/ymca_retention.libraries.yml
@@ -105,6 +105,15 @@ angular-app:
     - core/drupal
     - core/drupalSettings
 
+ngwinners-app:
+  version: VERSION
+  js:
+    js/ngwinners-app.js: {}
+  dependencies:
+    - ymca_retention/angular
+    - core/drupal
+    - core/drupalSettings
+
 user-menu:
   version: VERSION
   js:
