--- a/docroot/sites/default/config/staging/field.field.contact_message.membership_form.field_label.yml
+++ b/docroot/sites/default/config/staging/field.field.contact_message.membership_form.field_label.yml
@@ -17,7 +17,7 @@ required: false
 translatable: true
 default_value:
   -
-    value: 'Please complete your information below:  '
+    value: '<p class="text-right"><small>* All fields required unless otherwise noted</small></p>Please complete your information below:  '
 default_value_callback: ''
 settings: {  }
 field_type: webform_markup_item
