--- a/tour.tour.openy-branch-add.yml
+++ b/tour.tour.openy-branch-add.yml
@@ -30,7 +30,7 @@ tips:
     id: 3-col
     plugin: text
     label: 'Add 3 column paragraph'
-    body: 'In Content area click on "Content paragraph" [openy_tour:click:edit-field-branch-body-add-more-add-more-button-3c]'
+    body: 'In Content area click on "Add 3 columns" [openy_tour:click:edit-field-branch-body-add-more-add-more-button-3c]'
     weight: 3
     attributes:
       data-id: 'edit-group-content-area'
@@ -39,18 +39,21 @@ tips:
     id: block-type
     plugin: text
     label: 'Select Block type'
-    body: 'Select "Branch Amenities" and press "Add new custom block." [openy_tour:click:edit-field-branch-body-0-subform-field-prgf-3c-left-actions-ief-add]'
+    body: 'Select "Branch Amenities" and press "Add new custom block". [openy_tour:click:edit-field-branch-body-0-subform-field-prgf-3c-left-actions-ief-add]'
     weight: 4
+    attributes:
+      data-class: 'form-submit[value="Add new custom block"]'
 
   create-block:
-    id: block-type
+    id: create-type
     plugin: text
     label: 'Create block'
-    body: '"Fill in Title - it will appear on the page.</br>
+    body: 'Fill in Title - it will appear on the page.</br>
            Block Description - it''s needed to find block in Admin interface later,</br>
            Link - This link will be displayed below block on branch page.</br>
-           And press ""Create custom block"" to save it.'
+           And press "Create custom block" to save it.'
     weight: 5
+    location: right
     attributes:
       data-class: 'form-submit[value="Create custom block"]'
 
@@ -58,7 +61,7 @@ tips:
     id: result
     plugin: text
     label: 'Result'
-    body: '"Now all columns are added. Press ""Save and publish"" and see resulting block on the page.'
+    body: 'Now all columns are added. Press "Save and publish" and see resulting block on the page.'
     weight: 6
     attributes:
       data-class: 'form-submit[value="Save and publish"]'
