[OYPD-347] Update composer adding php 5.6+ dependency.

--- a/openy.info.yml
+++ b/openy.info.yml
@@ -4,7 +4,7 @@ description: 'Open Y Drupal distribution.'
 core: 8.x
 distribution:
   name: OpenY
-
+php: 5.6
 # Required modules
 dependencies:
   # Core modules.
