--- a/modules/openy_features/openy_location/modules/openy_loc_branch/config/install/core.entity_view_display.node.branch.default.yml
+++ b/modules/openy_features/openy_location/modules/openy_loc_branch/config/install/core.entity_view_display.node.branch.default.yml
@@ -14,11 +14,13 @@ dependencies:
     - field.field.node.branch.field_location_phone
     - field.field.node.branch.field_location_state
     - field.field.node.branch.field_location_temp_url
+    - field.field.node.branch.field_meta_tags
     - node.type.branch
   module:
     - address
     - entity_reference_revisions
     - geolocation
+    - metatag
     - openy_field_custom_hours
     - telephone
     - user
@@ -68,6 +70,12 @@ content:
       title: ''
     third_party_settings: {  }
     type: telephone_link
+  field_meta_tags:
+    weight: 7
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_empty_formatter
 hidden:
   field_location_area: true
   field_location_directions: true
