--- a/modules/openy_features/openy_location/modules/openy_loc_branch/openy_loc_branch.info.yml
+++ b/modules/openy_features/openy_location/modules/openy_loc_branch/openy_loc_branch.info.yml
@@ -10,6 +10,7 @@ dependencies:
   - geolocation
   - link
   - menu_ui
+  - metatag
   - node
   - openy_field_custom_hours
   - openy_hours_formatter
