--- a/modules/openy_features/openy_location/modules/openy_loc_camp/config/install/core.entity_view_display.node.camp.default.yml
+++ b/modules/openy_features/openy_location/modules/openy_loc_camp/config/install/core.entity_view_display.node.camp.default.yml
@@ -11,11 +11,13 @@ dependencies:
     - field.field.node.camp.field_location_email
     - field.field.node.camp.field_location_fax
     - field.field.node.camp.field_location_phone
+    - field.field.node.camp.field_meta_tags
     - node.type.camp
   module:
     - address
     - entity_reference_revisions
     - geolocation
+    - metatag
     - telephone
     - user
 id: node.camp.default
@@ -65,6 +67,12 @@ content:
       title: ''
     third_party_settings: {  }
     type: telephone_link
+  field_meta_tags:
+    weight: 6
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_empty_formatter
 hidden:
   field_camp_menu_links: true
   field_location_directions: true
