--- a/modules/openy_features/openy_location/modules/openy_loc_facility/config/install/core.entity_form_display.node.facility.default.yml
+++ b/modules/openy_features/openy_location/modules/openy_loc_facility/config/install/core.entity_form_display.node.facility.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.facility.field_location_email
     - field.field.node.facility.field_location_fax
     - field.field.node.facility.field_location_phone
+    - field.field.node.facility.field_meta_tags
     - field.field.node.facility.field_sidebar_content
     - node.type.facility
   module:
@@ -19,6 +20,7 @@ dependencies:
     - field_group
     - geolocation
     - link
+    - metatag
     - paragraphs
     - path
     - telephone
@@ -165,6 +167,11 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: telephone_default
+  field_meta_tags:
+    weight: 26
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_firehose
   field_sidebar_content:
     type: entity_reference_paragraphs
     weight: 4
