--- a/modules/openy_features/openy_node/modules/openy_node_class/openy_node_class.info.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_class/openy_node_class.info.yml
@@ -7,9 +7,10 @@ dependencies:
   - field
   - field_group
   - menu_ui
+  - metatag
   - node
-  - openy_node_activity
   - openy_node
+  - openy_node_activity
   - paragraphs
   - path
   - pathauto
