--- a/modules/openy_features/openy_node/modules/openy_node_activity/config/install/core.entity_form_display.node.activity.default.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_activity/config/install/core.entity_form_display.node.activity.default.yml
@@ -4,9 +4,11 @@ dependencies:
   config:
     - field.field.node.activity.field_activity_category
     - field.field.node.activity.field_activity_description
+    - field.field.node.activity.field_meta_tags
     - node.type.activity
   module:
     - field_group
+    - metatag
     - path
     - text
 third_party_settings:
@@ -49,6 +51,11 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
+  field_meta_tags:
+    weight: 26
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_firehose
   path:
     type: path
     weight: 7
