--- a/modules/openy_features/openy_node/modules/openy_node_blog/config/install/core.entity_form_display.node.blog.default.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_blog/config/install/core.entity_form_display.node.blog.default.yml
@@ -12,11 +12,13 @@ dependencies:
     - field.field.node.blog.field_blog_style
     - field.field.node.blog.field_blog_text_color
     - field.field.node.blog.field_content
+    - field.field.node.blog.field_meta_tags
     - field.field.node.blog.field_sidebar_content
     - node.type.blog
   module:
     - entity_browser
     - field_group
+    - metatag
     - paragraphs
     - path
     - text
@@ -141,6 +143,11 @@ content:
       form_display_mode: default
     third_party_settings: {  }
     type: entity_reference_paragraphs
+  field_meta_tags:
+    weight: 26
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_firehose
   field_sidebar_content:
     weight: 12
     settings:
