--- a/modules/openy_features/openy_node/modules/openy_node_blog/config/install/core.entity_view_display.node.blog.default.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_blog/config/install/core.entity_view_display.node.blog.default.yml
@@ -11,10 +11,12 @@ dependencies:
     - field.field.node.blog.field_blog_style
     - field.field.node.blog.field_blog_text_color
     - field.field.node.blog.field_content
+    - field.field.node.blog.field_meta_tags
     - field.field.node.blog.field_sidebar_content
     - node.type.blog
   module:
     - entity_reference_revisions
+    - metatag
     - options
     - text
     - user
@@ -85,6 +87,12 @@ content:
       link: ''
     third_party_settings: {  }
     type: entity_reference_revisions_entity_view
+  field_meta_tags:
+    weight: 111
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_empty_formatter
   field_sidebar_content:
     weight: 108
     label: above
