--- a/modules/openy_features/openy_node/modules/openy_node_class/config/install/core.entity_form_display.node.class.default.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_class/config/install/core.entity_form_display.node.class.default.yml
@@ -5,10 +5,12 @@ dependencies:
     - field.field.node.class.field_class_activity
     - field.field.node.class.field_class_description
     - field.field.node.class.field_content
+    - field.field.node.class.field_meta_tags
     - field.field.node.class.field_sidebar_content
     - node.type.class
   module:
     - field_group
+    - metatag
     - paragraphs
     - path
     - text
@@ -76,6 +78,11 @@ content:
       form_display_mode: default
     third_party_settings: {  }
     type: entity_reference_paragraphs
+  field_meta_tags:
+    weight: 26
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_firehose
   field_sidebar_content:
     weight: 9
     settings:
