--- a/modules/openy_features/openy_node/modules/openy_node_class/config/install/core.entity_view_display.node.class.default.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_class/config/install/core.entity_view_display.node.class.default.yml
@@ -5,10 +5,12 @@ dependencies:
     - field.field.node.class.field_class_activity
     - field.field.node.class.field_class_description
     - field.field.node.class.field_content
+    - field.field.node.class.field_meta_tags
     - field.field.node.class.field_sidebar_content
     - node.type.class
   module:
     - entity_reference_revisions
+    - metatag
     - text
     - user
 id: node.class.default
@@ -37,6 +39,12 @@ content:
       link: ''
     third_party_settings: {  }
     type: entity_reference_revisions_entity_view
+  field_meta_tags:
+    weight: 105
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_empty_formatter
   field_sidebar_content:
     weight: 104
     label: above
