--- a/modules/openy_features/openy_node/modules/openy_node_landing/config/install/core.entity_form_display.node.landing_page.default.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_landing/config/install/core.entity_form_display.node.landing_page.default.yml
@@ -5,10 +5,12 @@ dependencies:
     - field.field.node.landing_page.field_content
     - field.field.node.landing_page.field_header_content
     - field.field.node.landing_page.field_lp_layout
+    - field.field.node.landing_page.field_meta_tags
     - field.field.node.landing_page.field_sidebar_content
     - node.type.landing_page
   module:
     - field_group
+    - metatag
     - paragraphs
     - path
 third_party_settings:
@@ -87,6 +89,11 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: options_select
+  field_meta_tags:
+    weight: 26
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_firehose
   field_sidebar_content:
     weight: 12
     settings:
