--- a/modules/openy_features/openy_node/modules/openy_node_landing/config/install/core.entity_view_display.node.landing_page.default.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_landing/config/install/core.entity_view_display.node.landing_page.default.yml
@@ -5,10 +5,12 @@ dependencies:
     - field.field.node.landing_page.field_content
     - field.field.node.landing_page.field_header_content
     - field.field.node.landing_page.field_lp_layout
+    - field.field.node.landing_page.field_meta_tags
     - field.field.node.landing_page.field_sidebar_content
     - node.type.landing_page
   module:
     - entity_reference_revisions
+    - metatag
     - options
     - user
 id: node.landing_page.default
@@ -38,6 +40,12 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: list_default
+  field_meta_tags:
+    weight: 105
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_empty_formatter
   field_sidebar_content:
     weight: 104
     label: above
