--- a/modules/openy_features/openy_node/modules/openy_node_mbrshp/config/install/core.entity_form_display.node.membership.default.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_mbrshp/config/install/core.entity_form_display.node.membership.default.yml
@@ -6,9 +6,11 @@ dependencies:
     - field.field.node.membership.field_mbrshp_description
     - field.field.node.membership.field_mbrshp_image
     - field.field.node.membership.field_mbrshp_info
+    - field.field.node.membership.field_meta_tags
     - node.type.membership
   module:
     - entity_browser
+    - metatag
     - paragraphs
     - path
     - text
@@ -51,6 +53,11 @@ content:
       add_mode: dropdown
       form_display_mode: default
     third_party_settings: {  }
+  field_meta_tags:
+    weight: 27
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_firehose
   path:
     type: path
     weight: 7
