--- a/modules/openy_features/openy_node/modules/openy_node_mbrshp/config/install/core.entity_view_display.node.membership.default.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_mbrshp/config/install/core.entity_view_display.node.membership.default.yml
@@ -5,9 +5,11 @@ dependencies:
     - field.field.node.membership.field_mbrshp_description
     - field.field.node.membership.field_mbrshp_image
     - field.field.node.membership.field_mbrshp_info
+    - field.field.node.membership.field_meta_tags
     - node.type.membership
   module:
     - entity_reference_revisions
+    - metatag
     - text
     - user
 id: node.membership.default
@@ -36,6 +38,12 @@ content:
       view_mode: default
       link: ''
     third_party_settings: {  }
+  field_meta_tags:
+    weight: 104
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_empty_formatter
   links:
     weight: 100
 hidden: {  }
