--- a/modules/openy_features/openy_node/modules/openy_node_program/config/install/core.entity_view_display.node.program.default.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_program/config/install/core.entity_view_display.node.program.default.yml
@@ -3,6 +3,7 @@ status: true
 dependencies:
   config:
     - field.field.node.program.field_content
+    - field.field.node.program.field_meta_tags
     - field.field.node.program.field_program_color
     - field.field.node.program.field_program_description
     - field.field.node.program.field_program_icon
@@ -11,6 +12,7 @@ dependencies:
     - node.type.program
   module:
     - entity_reference_revisions
+    - metatag
     - text
     - user
 id: node.program.default
@@ -26,6 +28,12 @@ content:
       link: ''
     third_party_settings: {  }
     type: entity_reference_revisions_entity_view
+  field_meta_tags:
+    weight: 7
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_empty_formatter
   field_program_color:
     weight: 2
     label: hidden
