--- a/composer.json
+++ b/composer.json
@@ -163,6 +163,7 @@
         "drupal/optimizely": "1.2",
         "drupal/simple_sitemap": "^2.8",
         "drupal/redirect": "^1.0@alpha",
-        "drupal/metatag": "^1.0"
+        "drupal/metatag": "^1.0",
+        "drupal/metatag_open_graph": "^1.0"
     }
 }
