[OYPD-21] Metatags: OG defaults for bundle with main images

--- a/modules/openy_features/openy_node/openy_node.info.yml
+++ b/modules/openy_features/openy_node/openy_node.info.yml
@@ -5,7 +5,9 @@ core: 8.x
 dependencies:
   - entity_reference_revisions
   - field
+  - image
   - jquery_colorpicker
+  - metatag
   - node
   - paragraphs
   - path
