[YMCA-1513] Add File Entity Link Formatter

--- a/docroot/sites/default/config/staging/core.entity_view_display.file.document.default.yml
+++ b/docroot/sites/default/config/staging/core.entity_view_display.file.document.default.yml
@@ -13,7 +13,7 @@ bundle: document
 mode: default
 content:
   filename:
-    type: file_link
+    type: file_entity_link
     label: hidden
     weight: 0
     settings:
