--- a/behat.yml
+++ b/behat.yml
@@ -12,6 +12,7 @@ default:
         - Drupal\DrupalExtension\Context\MinkContext
         - Drupal\DrupalExtension\Context\MessageContext
         - Drupal\DrupalExtension\Context\DrushContext
+        - Cevou\Behat\ScreenshotCompareExtension\Context\ScreenshotCompareContext
   formatters:
     html:
       output_path: %paths.base%/build/reports/behat
@@ -27,15 +28,13 @@ default:
       goutte: ~
       selenium2: ~
     Drupal\DrupalExtension:
+      text:
+        log_out: "Log out"
       api_driver: drupal
       drush_driver: drush
       drush:
         root: '/var/www/docroot'
       blackbox: ~
-      subcontexts:
-        paths:
-          - tests/features/bootstrap
-        autoload: false
       region_map:
         header: '#page-head'
         header_area: '#edit-group-header-area'
@@ -50,6 +49,15 @@ default:
         message_selector: '.status-message'
         error_message_selector: 'status-message__alert p'
         success_message_selector: '.status-message ul, .status-message p'
+    Drupal\TqExtension:
+        wait_for_email: 10
+        wait_for_redirect: 60
+    #   email_account_strings: get_account_strings_for_email
+    #   email_accounts:
+    #     example1@email.com:
+    #     imap: imap.gmail.com:993/imap/ssl
+    #     username: example1@email.com
+    #     password: p4sswDstr_1
     emuse\BehatHTMLFormatter\BehatHTMLFormatterExtension:
       renderer: Twig
       name: html
@@ -57,5 +65,13 @@ default:
       print_args: true
       print_outp: true
       loop_break: true
+    Cevou\Behat\ScreenshotCompareExtension:
+      screenshot_dir: %paths.base%/features/screenshots
+      sessions:
+        default: ~
+      adapters:
+        default:
+          local:
+            directory: %paths.base%/error_screenshots
 imports:
   - behat.local.yml
