[OYPD-262] Add homepage and branch demo content, and add heading to Latest Blog Posts (Branch) paragraph.

--- a/modules/openy_features/openy_prgf/modules/openy_prgf_blog_camp/openy_prgf_blog_camp.info.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_blog_camp/openy_prgf_blog_camp.info.yml
@@ -1,4 +1,4 @@
-name: 'Openy Latest Blog Posts (Branch)'
+name: 'Openy Latest Blog Posts (Camp)'
 description: 'Provides latest blog posts for camp.'
 type: module
 core: 8.x
