[YPTF-227]: Add Maplewood location to active locations.

--- a/docroot/modules/custom/ymca_mindbody/config/install/ymca_mindbody.trainings_mapping.env.yml
+++ b/docroot/modules/custom/ymca_mindbody/config/install/ymca_mindbody.trainings_mapping.env.yml
@@ -24,6 +24,7 @@ production:
     16: { label: "West St. Paul YMCA", active: true }
     4: { label: "White Bear Lake YMCA", active: true }
     15: { label: "Woodbury YMCA", active: true }
+    25: { label: "Maplewood YMCA", active: true }
 
   programs:
     2: { label: "Personal Training", active: true, image: "personal_training.jpg" }
