--- a/docroot/sites/default/config/staging/ymca_mindbody.trainings_mapping.env.yml
+++ b/docroot/sites/default/config/staging/ymca_mindbody.trainings_mapping.env.yml
@@ -70,6 +70,9 @@ production:
     15:
       label: 'Woodbury YMCA'
       active: true
+    25:
+      label: 'Maplewood YMCA'
+      active: true
   programs:
     2:
       label: 'Personal Training'
