--- a/docroot/sites/default/config/staging/ymca_mindbody.notifications.yml
+++ b/docroot/sites/default/config/staging/ymca_mindbody.notifications.yml
@@ -1,88 +1,93 @@
 locations:
-  2:
-    -
-      name: 'Andrew Dalton'
-      email: Andrew.Dalton@ymcamn.org
-  7:
-    -
-      name: 'Beth Kanthak'
-      email: Beth.Kanthak@ymcamn.org
-  11:
-    -
-      name: 'Breanna Koch'
-      email: Breanna.Koch@ymcamn.org
-  20:
-    -
-      name: 'Damien Rochon-Washington'
-      email: Damien.Rochon-Washington@ymcamn.org
-  17:
-    -
-      name: 'Diana Bishop'
-      email: Diana.Bishop@ymcamn.org
-  9:
-    -
-      name: 'Eric Kraut'
-      email: Eric.Kraut@ymcamn.org
-  18:
-    -
-      name: 'Gary Sandin'
-      email: Gary.Sandin@ymcamn.org
-  19:
-    -
-      name: 'Heather Dayton'
-      email: Heather.Dayton@ymcamn.org
-  22:
-    -
-      name: 'Heidi Freitag'
-      email: Heidi.Freitag@ymcamn.org
   1:
     -
       name: 'Jake Humnick'
-      email: Jake.Humnick@ymcamn.org
-  10:
+      email: jake.humnick@ymcamn.org
+  2:
     -
-      name: 'Joe Augenstein'
-      email: Joe.Augenstein@ymcamn.org
+      name: 'Dru Dalton'
+      email: andrew.dalton@ymcamn.org
   3:
     -
-      name: 'Justin Deblauw'
-      email: Justin.Deblauw@ymcamn.org
+      name: 'Rachel Bents'
+      email: rachel.bents@ymcamn.org
   4:
     -
-      name: 'Kyle Hall'
-      email: Kyle.Hall@ymcamn.org
+      name: 'Adam Becker'
+      email: adam.becker@ymcamn.org
+  5:
+    -
+      name: 'Joe Augenstein'
+      email: joe.augenstein@ymcamn.org
   6:
     -
       name: 'LeAnn Niebur'
-      email: LeAnn.Niebur@ymcamn.org
-  13:
+      email: leann.niebur@ymcamn.org
+  7:
     -
-      name: 'Mark Smith'
-      email: Mark.Smith@ymcamn.org
-    -
-      name: 'Rebecca VanDyke'
-      email: Rebecca.VanDyke@ymcamn.org
-  14:
-    -
-      name: 'Rachel Humnick'
-      email: Rachel.Humnick@ymcamn.org
+      name: 'Beth Kanthak'
+      email: beth.kanthak@ymcamn.org
   8:
     -
       name: 'Ronnie Cordova'
-      email: Ronnie.Cordova@ymcamn.org
-  15:
+      email: ronnie.cordova@ymcamn.org
+  9:
     -
-      name: 'Tim Moore'
-      email: Tim.Moore@ymcamn.org
-  23:
+      name: 'Anna Golv'
+      email: anna.golv@ymcamn.org
+  10:
     -
-      name: 'Velma Harris'
-      email: Velma.Harris@ymcamn.org
+      name: 'Greg Kimbrough'
+      email: greg.kimbrough@ymcamn.org
+  11:
+    -
+      name: 'Donavan Haugstad'
+      email: donavan.haugstad@ymcamn.org
   12:
     -
       name: 'Tim May'
-      email: Tim.May@ymcamn.org
-  24:
+      email: tim.may@ymcamn.org
+  13:
     -
-      name: 'Angie Suttles'
-      email: Angie.Suttles@ymcamn.org
+      name: 'Mark Smith'
+      email: mark.smith@ymcamn.org
+  14:
+    -
+      name: 'Rachel Humnick'
+      email: rachel.humnick@ymcamn.org
+  15:
+    -
+      name: 'Tim Moore'
+      email: tim.moore@ymcamn.org
+  16:
+    -
+      name: 'Becky VanDyke'
+      email: rebecca.vandyke@ymcamn.org
+  17:
+    -
+      name: 'Diana Bishop'
+      email: diana.bishop@ymcamn.org
+  18:
+    -
+      name: 'Gary Sandin'
+      email: gary.sandin@ymcamn.org
+  19:
+    -
+      name: 'Jesse Zachay'
+      email: jesse.zachay@ymcamn.org
+  20:
+    -
+      name: 'Damien Washington'
+      email: damien.rochon-washington@ymcamn.org
+  22:
+    -
+      name: 'Heidi Freitag'
+      email: heidi.freitag@ymcamn.org
+  23:
+    -
+      name: 'Velma Harris'
+      email: velma.harris@ymcamn.org
+  25:
+    -
+      name: 'Heather George'
+      email: heather.george@ymcamn.org
