[OYPD-221] Behat tests for the membership calculator paragraph.

--- a/behat.yml
+++ b/behat.yml
@@ -47,6 +47,9 @@ default:
         message_selector: '.status-message'
         error_message_selector: 'status-message__alert p'
         success_message_selector: '.status-message ul, .status-message p'
+      text:
+        log_out: "Log out"
+        log_in: "Log in"
     Drupal\TqExtension:
         wait_for_email: 10
         wait_for_redirect: 60
