--- a/composer.json
+++ b/composer.json
@@ -131,9 +131,9 @@
         "drupal/confi": "1.3",
         "drupal/config_update": "1.3",
         "drupal/entity": "1.0-alpha4",
-        "drupal/media_entity": "1.6",
+        "drupal/media_entity": "1.x-dev",
         "drupal/media_entity_image": "1.x-dev",
-        "drupal/media_entity_document": "1.1",
+        "drupal/media_entity_document": "1.x-dev",
         "drupal/address": "1.0-rc3",
         "drupal/paragraphs": "1.0",
         "drupal/entity_reference_revisions": "1.2",
